2006-11-04  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/flow.c (igraph_i_vertex_connectivity_directed) : corrected

2006-11-03  Tamas Nepusz  <ntamas@rmki.kfki.hu>

	* interfaces/python, configure.in : modified to use Python's
	distutils build mechanism instead.
	* interfaces/python/package/__init__.py : the Python package is
	now divided into two submodule: igraph._igraph is the interface
	to the C functions, while the main igraph module just imports
	igraph._igraph and adds non time-critical functionality on top
	of it
	* debian/rules : omits Python package generation

2006-10-30  Tamas Nepusz  <ntamas@rmki.kfki.hu>

	* interfaces/python/graphobject.c (igraphmodule_Graph_to_directed)
	(igraphmodule_Graph_to_undirected) : added
	* interfaces/python/test.py : added test cases
	
2006-10-18  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/games.c (igraph_erdos_renyi_game_gnp) : bug corrected,
	use igraph_real_t, long int is not enough

	* src/structural_properties.c (igraph_constraint) : rewritten,
	weight argument added
	
2006-10-10  Tamas Nepusz  <ntamas@rmki.kfki.hu>

	* src/attributes.h : corrected a typo
	* interfaces/python/igraphmodule.c
	(igraphmodule_i_attribute_add_vertices)
	(igraphmodule_i_attribute_add_edges) : added attr parameter support
	* interfaces/python/test.py : extended NCOL test case
	* src/type_indexededgelist.c (igraph_add_vertices) :
	moved invocation of attribute handler to the end
	
2006-10-10  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/flow.c (igraph_maxflow_value) : range check bug corrected
	(igraph_st_mincut_value) : check source==target
	(igraph_i_mincut_value_undirected) : remove unneeded directedness check
	(igraph_i_st_vertex_connectivity_directed) : correct neighbor check
	(igraph_i_st_vertex_connectivity_undirected) : add range check
	(igraph_st_vertex_connectivity) : check source==target
	(igraph_st_edge_connectivity) : check source==target
	(igraph_edge_disjoint_paths) : rewritten (unnecessarily)